--- a/index.html
+++ b/index.html
@@ -1,169 +1,9 @@
-
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Digital Work</title>
-
-    <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Kranky' rel='stylesheet'>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet'>
-    <link href='http://fonts.googleapis.com/css?family=Rajdhani:300,400, 500,600|Roboto+Condensed:400,300|Noticia+Text:400,700' rel='stylesheet' type='text/css'>
-
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <title></title>
 </head>
-<body id="page-top" class="main">
-
-<div id="first">
-    <section id="names">
-        <div class="container navbar-fixed-top title-names">
-            <h2>DIGITAL WORKS </h2>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-offset-3 col-md-6">
-                    <div class="content-type content-name text-center">
-                        <p>Franz Mattuschka</p>
-                        <p>Moderne industrielle Welten</p>
-                    </div>
-                    <div class="content-type content-name text-center">
-                        <p>Thomas Hiebert</p>
-                        <p>Engagement</p>
-                    </div>
-                    <div class="content-type content-name text-center">
-                        <p>Regina Loy</p>
-                        <p>Mensch - Maschine</p>
-                    </div>
-                    <div class="content-type content-name text-center">
-                        <p>Janosch Kunze</p>
-                        <p>Drei Bilder in Kombination</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="images">
-        <div class="container navbar-fixed-top title-images">
-            <h2>DIGITAL WORKS </h2>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-offset-3 col-md-6">
-                    <a href="unterseite-franz.html">
-                        <div class="content-type content-image">
-                            <img class="img-responsive" src="img/franzmattuschka-menu.jpg">
-                        </div>
-                    </a>
-                    <div class="content-type content-image">
-                        <img class="img-responsive" src="img/thomashiebert-menu.jpg">
-                    </div>
-                    <div class="content-type content-image">
-                        <img class="img-responsive" src="img/reginaloy-menu.jpg">
-                    </div>
-                    <div class="content-type content-image">
-                        <img class="img-responsive" src="img/franzmattuschka2-menu.jpg">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-</div>
-
-<div id="second">
-    <section id="names-detail">
-        <div class="container navbar-fixed-top title-names">
-            <h2>DIGITAL WORKS</h2>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-offset-3 col-md-6">
-                    <div class="content-type content-name text-center">
-                        <p>Franz Mattuschka</p>
-                        <p>Moderne industrielle Welten</p>
-                    </div>
-                    <div class="content-type content-name text-center">
-                        <p>Thomas Hiebert</p>
-                        <p>Engagement</p>
-                    </div>
-                    <div class="content-type content-name text-center">
-                        <p>Regina Loy</p>
-                        <p>Mensch - Maschine</p>
-                    </div>
-                    <div class="content-type content-name text-center">
-                        <p>Janosch Kunze</p>
-                        <p>Drei Bilder in Kombination</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="images-detail">
-        <div class="container navbar-fixed-top title-images">
-            <h2>DIGITAL WORKS </h2>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-offset-3 col-md-6">
-                    <a href="unterseite-franz.html">
-                        <div class="content-type content-image">
-                            <img class="img-responsive" src="img/franzmattuschka-menu.jpg">
-                        </div>
-                    </a>
-                    <div class="content-type content-image">
-                        <img class="img-responsive" src="img/thomashiebert-menu.jpg">
-                    </div>
-                    <div class="content-type content-image">
-                        <img class="img-responsive" src="img/reginaloy-menu.jpg">
-                    </div>
-                    <div class="content-type content-image">
-                        <img class="img-responsive" src="img/franzmattuschka2-menu.jpg">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-</div>
-
-<div id="draggable-h" class="draggie draggie-horizontal"></div>
-<div id="draggable-v" class="draggie draggie-vertical"></div>
-
-
-<!-- JQuery -->
-<script src="js/jquery.js"></script>
-
-<!-- Bootstrap Core -->
-<script src="js/bootstrap.min.js"></script>
-
-<!-- Draggabilly -->
-<script src="js/draggabilly.min.js"></script>
-
-<!-- CreateJS Lips -->
-<script src="js/easeljs-0.8.0.min.js"></script>
-<script src="js/tweenjs-0.6.0.min.js"></script>
-<script src="js/preloadjs-0.6.0.min.js"></script>
-
-<!-- CustomJS -->
-<script src="js/digitalWorks.js"> </script>
-
-
+<body>
 </body>
 </html>
