--- a/index.html
+++ b/index.html
@@ -5,5 +5,21 @@
     <title></title>
 </head>
 <body>
+
+<h1>Todo:</h1>
+<ul>
+    <li>setProgressOnDiscover</li>
+    <li>FM Discover</li>
+    <li>Update Title via JS</li>
+    <li>BugFixes</li>
+</ul>
+
+
+<h1>Links:</h1>
+<ul>
+    <li><a href="templates/index.html">4x4 slider</a></li>
+    <li><a href="templates/start.html">Beacon Animation</a></li>
+</ul>
+
 </body>
 </html>
