--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="de">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Surface | Sourface</title>
+    <link href="css/works.css" rel="stylesheet">
+    <link href="css/theme/surface.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/lightview/lightview.css" rel="stylesheet">
+
+    <!-- fonts -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Kranky' rel='stylesheet'>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet'>
+    <link href='http://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600|Roboto+Condensed:400,300|Noticia+Text:400,700'
+          rel='stylesheet' type='text/css'>
 </head>
 <body>
+<div class="wrapper">
+</div>
 
-<h1>Todo:</h1>
-<ul>
-    <li>setProgressOnDiscover</li>
-    <li>FM Discover</li>
-    <li>Update Title via JS</li>
-    <li>BugFixes</li>
-</ul>
+<!-- needed external libs -->
+<!-- TODO: ersetzen durch eine CDN Quelle oder requireJS-->
+<script src="js/jquery-2.1.3.min.js"></script>
+<script src="js/jquery.jplayer.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
+<script src="js/draggabilly.pkgd.min.js"></script>
+<script src="js/mustache.min.js"></script>
+<script src="js/lightview/lightview.js"></script>
 
-
-<h1>Links:</h1>
-<ul>
-    <li><a href="templates/index.html">4x4 slider</a></li>
-    <li><a href="templates/start.html">Beacon Animation</a></li>
-</ul>
+<!-- WORKS js script -->
+<script src="js/data/global.js"></script>
+<script src="js/data/content.js"></script>
+<script src="js/data/config.js"></script>
+<script src="js/works.js"></script>
 
 </body>
 </html>
