added beacon animation on Start

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="wrapper">
+<div class="wrapper" style="">
 </div>
 
 <!-- needed external libs -->
