updated Beacon quotes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="de">
     <meta charset="UTF-8">
-    <title>Surface | Sourface</title>
+    <title>Surface | Sousface</title>
     <link href="css/works.css" rel="stylesheet">
     <link href="css/theme/surface.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
