add and fixed the discover pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/theme/surface.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/lightview/lightview.css" rel="stylesheet">
+    <link href="css/discover.css" rel="stylesheet">
 
     <!-- fonts -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
